--- a/cellular-automata.cabal
+++ b/cellular-automata.cabal
@@ -62,7 +62,9 @@ executable cellular-automata
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Grid
+    other-modules: 
+      Grid,
+      Options,
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -70,8 +72,10 @@ executable cellular-automata
     -- Other library packages from which modules are imported.
     build-depends:    
       base ^>=4.19.1.0,
-      ansi-terminal >= 1.1.1,
-      array >= 0.5.6.0
+      ansi-terminal >= 1.1.1 && < 1.2,
+      array >= 0.5.6 && < 0.6,
+      optparse-applicative >= 0.18.1 && < 0.19,
+
     -- Directories containing source files.
     hs-source-dirs:   app
 
